--- a/roommate_expenses/expenses/templates/expenses/base.html
+++ b/roommate_expenses/expenses/templates/expenses/base.html
@@ -514,24 +514,16 @@
                                 <i class="fas fa-chart-line"></i> Dashboard
                             </a>
                         </li>
-                        {% if user.profile.group %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'add_expense' %}">
-                                    <i class="fas fa-plus-circle"></i> Add Expense
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'group_members' %}">
-                                    <i class="fas fa-users"></i> Members
-                                </a>
-                            </li>
-                        {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'group_options' %}">
-                                    <i class="fas fa-user-plus"></i> Join/Create Group
-                                </a>
-                            </li>
-                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'manage_groups' %}">
+                                <i class="fas fa-layer-group"></i> My Groups
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'group_options' %}">
+                                <i class="fas fa-user-plus"></i> Join/Create Group
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
