Fix group_members template and add complete manage_groups UI

--- a/roommate_expenses/expenses/templates/expenses/group_members.html
+++ b/roommate_expenses/expenses/templates/expenses/group_members.html
@@ -68,9 +68,11 @@
                     <a href="{% url 'dashboard' %}" class="btn btn-outline-primary">
                         <i class="fas fa-arrow-left"></i> Back to Dashboard
                     </a>
-                    <a href="{% url 'leave_group' %}" class="btn btn-outline-danger">
-                        <i class="fas fa-sign-out-alt"></i> Leave Group
-                    </a>
+                    {% if group.created_by != user %}
+                        <a href="{% url 'leave_group' group.id %}" class="btn btn-outline-danger">
+                            <i class="fas fa-sign-out-alt"></i> Leave Group
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
