--- a/roommate_expenses/expenses/templates/expenses/dashboard.html
+++ b/roommate_expenses/expenses/templates/expenses/dashboard.html
@@ -66,7 +66,7 @@
     </div>
 {% else %}
     <div class="row mb-4 align-items-center animate__animated animate__fadeInDown">
-        <div class="col-lg-6 col-md-7 mb-3 mb-md-0">
+        <div class="col-lg-8 col-md-7 mb-3 mb-md-0">
             <h2 class="fw-bold mb-2">
                 <i class="fas fa-chart-line" style="color: var(--primary-color);"></i>
                 {{ selected_group.name }} Dashboard
@@ -75,24 +75,10 @@
                 <i class="fas fa-calendar-alt"></i> Today is {{ "now"|date:"F d, Y" }}
             </p>
         </div>
-        <div class="col-lg-6 col-md-5 text-md-end">
-            <div class="btn-group w-100 w-md-auto" role="group">
-                <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown">
-                    <i class="fas fa-exchange-alt"></i> Switch Group
-                </button>
-                <ul class="dropdown-menu">
-                    {% for group in all_groups %}
-                        <li>
-                            <a class="dropdown-item {% if group.id == selected_group.id %}active{% endif %}" href="?group={{ group.id }}">
-                                <i class="fas fa-users"></i> {{ group.name }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="{% url 'add_expense' %}" class="btn btn-primary">
-                    <i class="fas fa-plus-circle"></i> Add Expense
-                </a>
-            </div>
+        <div class="col-lg-4 col-md-5 text-md-end">
+            <a href="{% url 'add_expense' %}" class="btn btn-primary w-100 w-md-auto">
+                <i class="fas fa-plus-circle"></i> Add New Expense
+            </a>
         </div>
     </div>
 
