--- a/roommate_expenses/expenses/templates/expenses/delete_expense.html
+++ b/roommate_expenses/expenses/templates/expenses/delete_expense.html
@@ -1,6 +1,6 @@
 {% extends "expenses/base.html" %}
 
-{% block title %}Delete Expense | Roommate Expenses{% endblock %}
+{% block title %}Delete Expense | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
