--- a/roommate_expenses/expenses/templates/expenses/edit_expense.html
+++ b/roommate_expenses/expenses/templates/expenses/edit_expense.html
@@ -1,7 +1,7 @@
 {% extends "expenses/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Edit Expense | Roommate Expenses{% endblock %}
+{% block title %}Edit Expense | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
