--- a/roommate_expenses/expenses/templates/expenses/expense_detail.html
+++ b/roommate_expenses/expenses/templates/expenses/expense_detail.html
@@ -1,6 +1,6 @@
 {% extends "expenses/base.html" %}
 
-{% block title %}Expense Details | Roommate Expenses{% endblock %}
+{% block title %}Expense Details | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
