--- a/roommate_expenses/expenses/templates/expenses/group_members.html
+++ b/roommate_expenses/expenses/templates/expenses/group_members.html
@@ -1,6 +1,6 @@
 {% extends "expenses/base.html" %}
 
-{% block title %}Group Members | Roommate Expenses{% endblock %}
+{% block title %}Group Members | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -19,7 +19,7 @@
                             <span class="badge" style="background: var(--primary-color); font-size: 1.2rem; padding: 0.5rem 1rem;">{{ group.code }}</span>
                         </h5>
                         <p class="text-muted mb-0">
-                            <i class="fas fa-share-alt"></i> Share this code with your roommates to invite them
+                            <i class="fas fa-share-alt"></i> Share this code to invite members
                         </p>
                     </div>
                 </div>
