--- a/roommate_expenses/expenses/templates/expenses/login.html
+++ b/roommate_expenses/expenses/templates/expenses/login.html
@@ -1,7 +1,7 @@
 {% extends "expenses/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Login | Roommate Expenses{% endblock %}
+{% block title %}Login | Expense Tracker{% endblock %}
 
 {% block content %}
 <style>
