--- a/roommate_expenses/expenses/templates/expenses/manage_groups.html
+++ b/roommate_expenses/expenses/templates/expenses/manage_groups.html
@@ -1,6 +1,6 @@
 {% extends "expenses/base.html" %}
 
-{% block title %}My Groups | Roommate Expenses{% endblock %}
+{% block title %}My Groups | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row mb-4 animate__animated animate__fadeInDown">
