--- a/roommate_expenses/expenses/templates/expenses/leave_group.html
+++ b/roommate_expenses/expenses/templates/expenses/leave_group.html
@@ -1,6 +1,6 @@
 {% extends "expenses/base.html" %}
 
-{% block title %}Leave Group | Roommate Expenses{% endblock %}
+{% block title %}Leave Group | Expense Tracker{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
